[Layout View] Fix PTSDK-587 - Controlgroup contents overlap outline

--- a/src/css/composer.css
+++ b/src/css/composer.css
@@ -100,10 +100,11 @@
 .adm-node >.ui-processingbar-container {
     height: auto;
 }
+.adm-node.ui-controlgroup,
 .adm-node.ui-selected[data-role=processingbar],
 .adm-node.ui-selected.ui-radio,
 .adm-node.ui-selected.ui-checkbox {
-    outline-offset: 0px;
+    outline-offset: 0px !important;
 }
 .adm-node.ui-selected,
 .nrc-sortable-container.ui-selected:not([data-role=footer]):not([data-role=header]),
